# lxf-shell

./: .gitignore  LICENSE  README.md
part1/: article.md  boxout-1.md  boxout-2.md
part1/01.cmake-intro/: CMakeLists.txt  main.cpp
part1/02.fork-exec/: main.cpp
part1/03.exec-explain/: main.cpp
part1/04.split-exec/: CMakeLists.txt  main.cpp
part2/01.redirect/01.redirect-stdout/: CMakeLists.txt  main.cpp
part2/01.redirect/02.redirect-exec/: CMakeLists.txt  main.cpp
part2/02.pipe/: CMakeLists.txt  main.cpp
part2/03.redirecting-shell/: CMakeLists.txt  main.cpp
part3/01.redirecting-input/: CMakeLists.txt  main.cpp
part3/02.shell-with-input-output-redirection/: main.cpp
part3/03.piped-execution/: CMakeLists.txt  main.cpp
part4/01.unit-tests/: CMakeLists.txt  main.cpp
part4/01.unit-tests/tests/: CMakeLists.txt  tests.cpp
part4/02.plugins/: CMakeLists.txt  main.cpp
part4/02.plugins/plugins/: CMakeLists.txt  plugin.h
part4/02.plugins/plugins/dirhandler/: cd.cpp
part5/01.ansi/: ansiprint.py
part5/02.prompt/: CMakeLists.txt  main.cpp
part5/02.prompt/plugins/: CMakeLists.txt
part5/02.prompt/plugins/dirhandler/: CMakeLists.txt  cd.cpp
part5/02.prompt/utils/: utils.cpp  utils.h
part6/01.arrowkeys/: keyscanner.cpp
part6/02.history/: CMakeLists.txt  main.cpp  utils.cpp  utils.h
part6/02.history/plugins/: plugin.h
part6/02.history/utils/: CMakeLists.txt
part7/01.complete/: CMakeLists.txt  cli-completion.json  db_handler.cpp  db_handler.h  lxf-shell-config.json  main.cpp
part7/01.complete/plugins/colored_prompt/: colored_prompt.cpp
part8/: CMakeLists.txt  main.cpp  snake.h
part8/plugins/colored_prompt/: CMakeLists.txt
part8/tests/: CMakeLists.txt
part8/utils/: CMakeLists.txt  sys_tools.cpp  sys_tools.h
